[fix] fix scrollbar

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,12 +14,26 @@ a,
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+    background: none;
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-corner {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #999;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 3px;
-  background: #aaa;
+  background: #ccc;
+}
+
+::-webkit-scrollbar-track-piece {
+    margin: 5px;
 }
 
 html,body{
